# LifeOs

./: .gitignore  CLAUDE.md  README.md  generate_icon.py  index.html  interview-writer.skill  package-lock.json  package.json  temp-xiaohongshu.md  todo.md  vite.config.ts
.claude/: SKILL-create-module.md  SKILL-debug-tauri.md  project.md  settings.local.json
docs/: user-manual.md
src/: App.tsx  index.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: email_commands.rs  extra_commands.rs  fs_commands.rs  mod.rs  vault_commands.rs
src/components/icons/: index.ts
src/components/layout/: SetupScreen.tsx  Shell.tsx  Sidebar.tsx  Titlebar.tsx
src/components/modules/: ChatView.tsx  ConnectorsView.tsx  DailyView.tsx  Dashboard.tsx  DecisionsView.tsx  DiaryView.tsx  GitScannerView.tsx  KanbanView.tsx  LifeView.tsx  MailView.tsx  NotesView.tsx  PlanningView.tsx  SchedulerView.tsx  ServersView.tsx  SettingsView.tsx  SkillsView.tsx  StickyNotesView.tsx
src/components/modules/Settings/: MenuManager.tsx  SKILL.md  SettingsView.tsx  ThemeCustomizer.tsx  manifest.json
src/components/modules/chat/: SKILL.md  index.tsx  manifest.json
src/components/modules/connectors/: SKILL.md  index.tsx  manifest.json
src/components/ui/: Badge.tsx  Button.test.tsx  Button.tsx  Card.tsx  ConfirmPopover.tsx  Input.tsx  Modal.tsx  Progress.tsx  Switch.tsx  Tabs.tsx  index.ts
src/hooks/: useVaultLoader.ts
src/plugins/: registry.ts
src/services/: env.ts  fs.ts  parser.test.ts  parser.ts  tauri.ts  web-fs-store.ts  web-fs.ts
src/stores/: app.test.ts  app.ts  theme.ts
src/tokens/: index.ts
src/types/: index.ts  tokens.ts
tests/e2e/: app.spec.ts
(+48 files in other folders)
