[package]
name = "life-os"
version = "0.1.0"
description = "Life OS — Personal Life Management System"
authors = ["you"]
edition = "2021"

[lib]
name = "life_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gray_matter = "0.2"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
