[package]
name = "life-os"
version = "0.1.0"
description = "Life OS — Personal Life Management System"
authors = ["you"]
edition = "2021"

[lib]
name = "life_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
gray_matter = "0.2"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
imap = "2"
native-tls = "0.2"
mail-parser = "0.9"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls", "builder"] }
open = "5"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
